<resources>
    <string name="app_name">Catalogue Movie UI UX</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one">one</string>
    <string name="movie_title">Movie Title</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="language">en-US</string>
    <string name="up_coming">Up Coming</string>
    <string name="whoops">Whoops Failed to load movie</string>
    <string name="search">search</string>
    <string name="change_language">Change Language</string>
    <string name="_search_movie">search movie</string>
    <string name="search_">Search</string>
    <string name="lorem_ipsum_sit_dolor_amet">lorem ipsum sit dolor amet</string>
    <string name="date">12-12-12</string>
    <string name="lorem">Lorem</string>
    <string name="favorite">Favorite</string>
    <string name="detail">Detail</string>
    <string name="share">share</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">Empty Text</string>
    <string name="setting">Setting</string>
    <string name="settings">Settings</string>
    <string name="settingss">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="notification">Notification</string>
    <string name="key_reminder_daily">key_reminder_daily</string>
    <string name="key_reminder_upcoming">key_reminder_upcoming</string>
    <string name="title_daily_notif">Daily Reminder Notification</string>
    <string name="summary_daily_reminder">turn on/off Daily Reminder</string>
    <string name="summary_upcoming_reminder">turn on/off Upcoming Reminder</string>
    <string name="key_language">key_language</string>

    <string name="daily_reminder_notif">Daily Reminder Notification</string>
    <string name="alarm_daily_reminder">Good morning! Ready to pick your new movies today?</string>
    <string name="daily_reminder_upcoming">Upcoming Reminder Notification</string>
    <string name="notif_actived">Activated</string>
    <string name="notif_deactived">Deactivated</string>
</resources>
