<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_movie"
        android:layout_width="match_parent"
        android:layout_height="178dp"
        android:background="?attr/selectableItemBackground"
        app:cardElevation="2dp"
        android:layout_gravity="center"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iv_movie"
                android:layout_width="126dp"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher"
                android:scaleType="fitXY"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">
                <TextView
                    android:id="@+id/tv_movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/movie_title"
                    android:layout_marginBottom="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
                <TextView
                    android:id="@+id/tv_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxWidth="200dp"
                    android:text="@string/lorem_ipsum_sit_dolor_amet"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <Button
                            android:id="@+id/btn_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:text="@string/detail"/>
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_toRightOf="@id/btn_detail"
                            android:text="@string/share"/>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>